# bumr

./: .gitignore  Cargo.toml  README.md  Rocket.toml  config.template.toml  dynamo_db.md  sqlite.md
docker/: Dockerfile  docker-compose.yml
src/: config.rs  main.rs
src/api/: mod.rs
src/api/rocket/: mod.rs
src/api/rocket/connection_pool/: dynamodb_pool.rs  mod.rs  sqlite_pool.rs
src/api/rocket/fairings/: content_security_policy.rs  mod.rs
src/api/rocket/routes/: mod.rs
src/cache/: mod.rs
src/cache/sqlite/: mod.rs  session.rs
src/database/: mod.rs
src/database/dynamodb/: mod.rs  session.rs
src/model/: mod.rs  session.rs
src/repository/: mod.rs  session_repo.rs
static/: index.html
